--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Skeleton</title>
 
-    <script type="module" src="/build/skeleton.esm.js"></script>
-    <script nomodule src="/build/skeleton.js"></script>
+    <script type="module" src="/build/skeleton-webcomponent.esm.js"></script>
+    <script nomodule src="/build/skeleton-webcomponent.js"></script>
   </head>
   <body>
     <div>
